minor fix in ai in industry nb

--- a/ai-in-industry.ipynb
+++ b/ai-in-industry.ipynb
@@ -55,11 +55,11 @@
     "    • Large medical datasets\n",
     "    • Computer vision algorithms\n",
     "    \n",
-    "2. Breast Cancer, 2016, Harvard Medical School researchers\n",
-    "\n",
-    "    .Used DL to identify cancer in lymph node images\n",
-    "    .Used Convolutional Neural Nets and custom hardware\n",
-    "    .AI model combined with humans achieved lower error than either one individually \n",
+    "2. Breast Cancer, 2016, Harvard Medical School researchers:\n",
+    "    - Used DL to identify cancer in lymph node images\n",
+    "    - Used Convolutional Neural Nets and custom hardware\n",
+    "    - AI model combined with humans achieved lower error than either one individually \n",
+    "    \n",
     "<div>\n",
     "<img src=\"https://education-team-2020.s3.eu-west-1.amazonaws.com/ai-eng/chart.png\" alt='chart' width=\"500\"/>\n",
     "</div>\n",
@@ -68,7 +68,7 @@
     "\n",
     "**Traditionally** : Doctors would diagnose a condition and recommend a treatment based on what historically worked for most people.\n",
     "\n",
-    "    . Some considerations for population/demographics\n",
+    "    .Some considerations for population/demographics\n",
     "    .Difficult to create custom treatments without extensive research/cost\n",
     "    \n",
     "**Now with AI** : Doctors can tailor treatments to individual patients.\n",
@@ -80,20 +80,20 @@
     "4. Healthcare: Treatment Protocol\n",
     "Example: ICU Intervene, MIT Computer Science and Artificial Intelligence Laboratory.\n",
     "\n",
-    "    .Uses ICU data, from vitals, labs, notes, to determine how to treat specific symptoms.\n",
-    "    .Makes real-time predictions from DL models, to provide recommendations for patients.\n",
-    "    .Forecasts predictions into the future (a few hours) compared to traditional methods (a few minutes).\n",
-    "    .Predictions can be run on common GPU and CPU hardware.\n",
+    "    - Uses ICU data, from vitals, labs, notes, to determine how to treat specific symptoms.\n",
+    "    - Makes real-time predictions from DL models, to provide recommendations for patients.\n",
+    "    - Forecasts predictions into the future (a few hours) compared to traditional methods (a few minutes).\n",
+    "    - Predictions can be run on common GPU and CPU hardware.\n",
     "    \n",
     "\n",
     "5. Healthcare: Drug Discovery\n",
     "\n",
     "**Traditionally** : Each new drug approval costs over a billion dollars in Research and Development.\n",
     "\n",
-    "    .The cost has been doubling every 9 years since 1970\n",
-    "    .The drug discovery process can take decades\n",
-    "    .9 out of 10 drug approval attempts fail\n",
-    "    .There are currently only 1,500 approved drugs\n",
+    "    . The cost has been doubling every 9 years since 1970\n",
+    "    . The drug discovery process can take decades\n",
+    "    . 9 out of 10 drug approval attempts fail\n",
+    "    . There are currently only 1,500 approved drugs\n",
     "    \n",
     "**Now With AI** : Companies are leveraging structured and unstructured data with AI, to establish a pipeline of new drug discovery.\n",
     "\n",
@@ -139,9 +139,9 @@
     "\n",
     "**Now with AI** : Self-driving cars are enabled by the latest AI breakthroughs in computer vision.\n",
     "\n",
-    "    .Carsidentifystopsigns,lanelines,and other landmarks via DL tools\n",
-    "    .Mapping technology can use computer vision to detect addresses\n",
-    "    .Carstriangulateandcanuseother3D- sensing technologies, such as LIDAR and RADAR\n",
+    "- Cars identify stop signs,lanelines,and other landmarks via DL tools\n",
+    "- Mapping technology can use computer vision to detect addresses\n",
+    "- Cars triangulate and can use other 3D-sensing technologies, such as LIDAR and RADAR\n",
     "\n",
     "**Example**: Waymo, the autonomous vehicle division of Alphabet Inc.\n",
     "\n",
@@ -228,21 +228,21 @@
     "3. Finance: Management\n",
     "**Example: ZestFinance**\n",
     "\n",
-    "    • Traditional underwriting systems make\n",
-    "    decisions using few data points.\n",
-    "    • Those with a limited credit history are often denied credit, ultimately leading to loss of revenue for lenders.\n",
-    "    • ZestFinance leverages thousands of data sources together with ML to more accurately score borrowers, even people with a small credit history.\n",
+    "- Traditional underwriting systems make\n",
+    "- decisions using few data points.\n",
+    "- Those with a limited credit history are often denied credit, ultimately leading to loss of revenue for lenders.\n",
+    "- ZestFinance leverages thousands of data sources together with ML to more accurately score borrowers, even people with a small credit history.\n",
     "    \n",
     "4. Stock Trading\n",
     "\n",
     "**Traditionally** : The speed and volume of information is daunting.\n",
-    "    ▪ The market is reactionary.\n",
-    "    ▪ It’s difficult to remain competitive while relying on traditional trading methods.\n",
-    "    ▪ Fundamental analysis is unable to show the entire financial picture.\n",
+    "- The market is reactionary.\n",
+    "- It’s difficult to remain competitive while relying on traditional trading methods.\n",
+    "- Fundamental analysis is unable to show the entire financial picture.\n",
     "    \n",
     "**Now with AI** : Companies use massive datasets together with DL methods for better forecasting.\n",
-    "    ▪ Datapulledfromfinancial,political, and social media\n",
-    "    ▪ Analystreportscombined.\n"
+    "- Data pulled fromfinancial,political, and social media\n",
+    "- Analyst reports combined.\n"
    ]
   },
   {
@@ -257,9 +257,9 @@
     "\n",
     "**Traditionally** : The world population is estimated to reach 9 billion by 2050.\n",
     "\n",
-    "    ▪ Foodproductionwillhavetoincreaseby 70% to meet the projected demand.\n",
-    "    ▪ Mostlandsuitableforfarmingisalready being used, hence the needed increase must come from higher yields.\n",
-    "    ▪ Agriculturemustfeedtheworldwhilenot over-straining Earth’s resources.\n",
+    "    ▪ Food production will have to increaseby 70% to meet the projected demand.\n",
+    "    ▪ Most land suitable for farming is already being used, hence the needed increase must come from higher yields.\n",
+    "    ▪ Agriculture must feed the world while not over-straining Earth’s resources.\n",
     "\n",
     "**Now with AI** : Autonomous robots use computer vision and a produce vacuum system for produce harvest.\n",
     "\n",
