add lessons w5/3 update title

--- a/sql-query-generation-2.ipynb
+++ b/sql-query-generation-2.ipynb
@@ -7,7 +7,7 @@
     "id": "7d930c89-4954-4e39-be5a-601c1dd89512"
    },
    "source": [
-    "# SQL query generation - Ctinue"
+    "# SQL query generation (2)"
    ]
   },
   {
