--- a/sql-query-generation-using-the-open-ai-api-1.ipynb
+++ b/sql-query-generation-using-the-open-ai-api-1.ipynb
@@ -5,7 +5,7 @@
    "id": "9aad5153-7470-4b09-9722-66216f873d5d",
    "metadata": {},
    "source": [
-    "# SQL query generation using the OPEN AI API "
+    "# SQL query generation using the OPEN AI API (1)"
    ]
   },
   {
