--- a/qlora-tuning-using-peft-from-hugging-face.ipynb
+++ b/qlora-tuning-using-peft-from-hugging-face.ipynb
@@ -49,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "#Importing necesary linbraries\n",
+    "#Importing necessary libraries\n",
     "import numpy as np\n",
     "import math\n",
     "import matplotlib.pyplot as plt"
@@ -232,8 +232,7 @@
     "id": "620MdVMk7iUS"
    },
    "source": [
-    "\n",
-    "# QLoRA. Fine-tuning a 4-bit Quantized Model using LoRA.\n",
+    "### QLoRA. Fine-tuning a 4-bit Quantized Model using LoRA.\n",
     "We are going to fine-tune with LoRA a 7B Model Quantizated to 4 bits."
    ]
   },
@@ -243,7 +242,7 @@
     "id": "uml3wgdri2_X"
    },
    "source": [
-    "## Load the PEFT and Datasets Libraries.\n",
+    "### Load the PEFT and Datasets Libraries.\n",
     "\n",
     "The PEFT library contains the Hugging Face implementation of differente fine-tuning techniques, like LoRA Tuning.\n",
     "\n",
@@ -304,7 +303,7 @@
    },
    "outputs": [],
    "source": [
-    "#Install the lastest versions of peft & transformers library recommended\n",
+    "#Install the latest versions of peft & transformers library recommended\n",
     "#if you want to work with the most recent models\n",
     "#!pip install -q git+https://github.com/huggingface/peft.git\n",
     "#!pip install -q git+https://github.com/huggingface/transformers.git"
