add updated version

--- a/langchain-intro.ipynb
+++ b/langchain-intro.ipynb
@@ -6,7 +6,7 @@
     "id": "w12Jz3h_INct"
    },
    "source": [
-    "# LangChain Introduction\n",
+    "# Introduction\n",
     "\n",
     "**LangChain** is a software development framework designed to simplify the creation of applications that use large language models (LLMs) like OpenAI's GPT. It's written in Python and JavaScript, and it was launched as an open-source project in October 2022 by Harrison Chase, a developer working at the machine learning startup Robust Intelligence.\n",
     "\n",
@@ -40,7 +40,7 @@
     "- LLMs: Large language models like GPT-3, BLOOM, etc\n",
     "- Agents: Agents use LLMs to decide what actions should be taken. Tools like web search or calculators can be used, and all are packaged into a logical loop of operations.\n",
     "- Memory: Short-term memory, long-term memory.\n",
-    "We will dive into each of these in much more detail in upcoming chapters of the LangChain handbook.\n",
+    "We will dive into each of these in much more detail in upcoming lessons.\n",
     "\n",
     "For now, we’ll start with the basics behind prompt templates and LLMs. We’ll also explore two LLM options available from the library, using models from Hugging Face Hub or OpenAI."
    ]
@@ -182,7 +182,7 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "Enter sport :  tennis\n"
@@ -209,7 +209,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "Enter sport :  tennis\n"
@@ -1603,6 +1603,162 @@
    "source": [
     "llm_math_chain.verbose"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LangChain's Chains Operations\n",
+    "\n",
+    "In LangChain, chains are a core concept used to combine different operations in a sequential or conditional manner. These chains allow you to build complex workflows by linking various components together. Here are some of the main types of chain operations and how they can be used:\n",
+    "\n",
+    "## 1. SequentialChain\n",
+    "\n",
+    "`SequentialChain` is used to link multiple components together so that the output of one component becomes the input for the next. This is useful for creating multi-step processes.\n",
+    "\n",
+    "**Usage Example**:\n",
+    "```python\n",
+    "from langchain.chains import SequentialChain\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.llms import OpenAI\n",
+    "\n",
+    "# Define individual components\n",
+    "prompt1 = PromptTemplate(template=\"Translate English to French: {text}\", input_variables=[\"text\"])\n",
+    "prompt2 = PromptTemplate(template=\"Translate French to Spanish: {text}\", input_variables=[\"text\"])\n",
+    "\n",
+    "llm = OpenAI(model_name=\"text-davinci-003\")\n",
+    "\n",
+    "# Create a SequentialChain\n",
+    "chain = SequentialChain(\n",
+    "    chains=[llm(prompt1), llm(prompt2)],\n",
+    "    input_variables=[\"text\"]\n",
+    ")\n",
+    "\n",
+    "# Run the chain\n",
+    "result = chain.run({\"text\": \"The house is wonderful.\"})\n",
+    "print(result)\n",
+    "```\n",
+    "\n",
+    "## 2. SimpleChain\n",
+    "`SimpleChain` links components in a single straightforward sequence, where each step is directly connected to the next.\n",
+    "\n",
+    "**Usage Example**:\n",
+    "```python\n",
+    "from langchain.chains import SimpleChain\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.llms import OpenAI\n",
+    "\n",
+    "# Define individual components\n",
+    "prompt = PromptTemplate(template=\"Summarize the following text: {text}\", input_variables=[\"text\"])\n",
+    "llm = OpenAI(model_name=\"text-davinci-003\")\n",
+    "\n",
+    "# Create a SimpleChain\n",
+    "chain = SimpleChain(\n",
+    "    chain=[llm(prompt)],\n",
+    "    input_variables=[\"text\"]\n",
+    ")\n",
+    "\n",
+    "# Run the chain\n",
+    "result = chain.run({\"text\": \"LangChain is a powerful library for building language model chains.\"})\n",
+    "print(result)\n",
+    "```\n",
+    "\n",
+    "## 3. ConditionalChain\n",
+    "\n",
+    "`ConditionalChain` allows you to execute different chains based on specific conditions. This is useful for decision-making processes within your workflow.\n",
+    "\n",
+    "**Usage Example**:\n",
+    "```python\n",
+    "from langchain.chains import ConditionalChain\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.llms import OpenAI\n",
+    "\n",
+    "# Define individual components\n",
+    "prompt1 = PromptTemplate(template=\"Translate to French: {text}\", input_variables=[\"text\"])\n",
+    "prompt2 = PromptTemplate(template=\"Translate to Spanish: {text}\", input_variables=[\"text\"])\n",
+    "\n",
+    "llm = OpenAI(model_name=\"text-davinci-003\")\n",
+    "\n",
+    "# Define a condition function\n",
+    "def translate_to_french(input_variables):\n",
+    "    return input_variables[\"language\"] == \"French\"\n",
+    "\n",
+    "# Create a ConditionalChain\n",
+    "chain = ConditionalChain(\n",
+    "    chains=[\n",
+    "        (translate_to_french, llm(prompt1)),\n",
+    "        (lambda x: True, llm(prompt2))  # Default condition\n",
+    "    ],\n",
+    "    input_variables=[\"text\", \"language\"]\n",
+    ")\n",
+    "\n",
+    "# Run the chain\n",
+    "result = chain.run({\"text\": \"The house is wonderful.\", \"language\": \"French\"})\n",
+    "print(result)\n",
+    "```\n",
+    "\n",
+    "## 4. ParallelChain\n",
+    "`ParallelChain` is used to execute multiple components simultaneously and then aggregate the results. This is useful for performing parallel processing tasks.\n",
+    "\n",
+    "**Usage Example**:\n",
+    "```python\n",
+    "from langchain.chains import ParallelChain\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.llms import OpenAI\n",
+    "\n",
+    "# Define individual components\n",
+    "prompt1 = PromptTemplate(template=\"Summarize the text: {text}\", input_variables=[\"text\"])\n",
+    "prompt2 = PromptTemplate(template=\"Translate to French: {text}\", input_variables=[\"text\"])\n",
+    "\n",
+    "llm = OpenAI(model_name=\"text-davinci-003\")\n",
+    "\n",
+    "# Create a ParallelChain\n",
+    "chain = ParallelChain(\n",
+    "    chains=[llm(prompt1), llm(prompt2)],\n",
+    "    input_variables=[\"text\"]\n",
+    ")\n",
+    "\n",
+    "# Run the chain\n",
+    "result = chain.run({\"text\": \"LangChain is a powerful library for building language model chains.\"})\n",
+    "print(result)\n",
+    "```\n",
+    "\n",
+    "## 5. MapReduceChain\n",
+    "`MapReduceChain` is used to apply a function to each item in a list (map step) and then aggregate the results (reduce step). This is useful for tasks like summarization or translation over large datasets.\n",
+    "\n",
+    "**Usage Example**:\n",
+    "```python\n",
+    "from langchain.chains import MapReduceChain\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.llms import OpenAI\n",
+    "\n",
+    "# Define individual components\n",
+    "prompt = PromptTemplate(template=\"Summarize the following text: {text}\", input_variables=[\"text\"])\n",
+    "llm = OpenAI(model_name=\"text-davinci-003\")\n",
+    "\n",
+    "# Create a MapReduceChain\n",
+    "chain = MapReduceChain(\n",
+    "    chain=llm(prompt),\n",
+    "    input_variables=[\"texts\"],\n",
+    "    map_input_key=\"texts\",\n",
+    "    reduce_output_key=\"summary\"\n",
+    ")\n",
+    "\n",
+    "# Run the chain\n",
+    "texts = [\"LangChain is a powerful library.\", \"It is used for building language model chains.\"]\n",
+    "result = chain.run({\"texts\": texts})\n",
+    "print(result)\n",
+    "```\n",
+    "\n",
+    "These are some of the primary chain operations available in LangChain. They can be combined and customized to create complex workflows tailored to specific language processing tasks. Each chain type serves a different purpose and can be selected based on the requirements of the task at hand."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
