--- a/langchain-intro.ipynb
+++ b/langchain-intro.ipynb
@@ -6,7 +6,7 @@
     "id": "w12Jz3h_INct"
    },
    "source": [
-    "# Introduction\n",
+    "# LangChain Introduction\n",
     "\n",
     "**LangChain** is a software development framework designed to simplify the creation of applications that use large language models (LLMs) like OpenAI's GPT. It's written in Python and JavaScript, and it was launched as an open-source project in October 2022 by Harrison Chase, a developer working at the machine learning startup Robust Intelligence.\n",
     "\n",
@@ -182,7 +182,7 @@
    },
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter sport :  tennis\n"
@@ -209,7 +209,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter sport :  tennis\n"
