--- a/langchain-memory.ipynb
+++ b/langchain-memory.ipynb
@@ -722,7 +722,7 @@
    "metadata": {},
    "source": [
     "<div>\n",
-    "<img src=\"./img/token_interaction.webp\" alt='auto' width=\"1000\"/>\n",
+    "<img src=\"https://education-team-2020.s3.eu-west-1.amazonaws.com/ai-eng/images-langchain-memory-rag/token_interaction.webp\" alt='auto' width=\"1000\"/>\n",
     "</div>"
    ]
   },
@@ -1046,7 +1046,7 @@
    "metadata": {},
    "source": [
     "<div>\n",
-    "<img src=\"./img/conversation_bw.webp\" alt='auto' width=\"1000\"/>\n",
+    "<img src=\"https://education-team-2020.s3.eu-west-1.amazonaws.com/ai-eng/images-langchain-memory-rag/conversation_bw.webp\" alt='auto' width=\"1000\"/>\n",
     "</div>"
    ]
   },
@@ -1153,7 +1153,7 @@
    "metadata": {},
    "source": [
     "<div>\n",
-    "<img src=\"./img/memory_bws.webp\" alt='auto' width=\"1000\"/>\n",
+    "<img src=\"https://education-team-2020.s3.eu-west-1.amazonaws.com/ai-eng/images-langchain-memory-rag/memory_bws.webp\" alt='auto' width=\"1000\"/>\n",
     "</div>"
    ]
   },
@@ -1184,13 +1184,6 @@
     "\n",
     "As mentioned, there are other forms of memory we can cover. We can also implement our own memory modules, use multiple types of memory within the same chain, combine them with agents, and much more. All of which we will cover in the future."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
