--- a/langchain-agents.ipynb
+++ b/langchain-agents.ipynb
@@ -149,7 +149,7 @@
     "Computers can solve incredibly complex math problems, yet if we ask GPT-4 to tell us the answer to 4.1 * 7.9, it fails:\n",
     "\n",
     "<div>\n",
-    "<img src=\"./img/agent_math_fails.webp\" alt='chart' width=\"1000\"/>\n",
+    "<img src=\"https://education-team-2020.s3.eu-west-1.amazonaws.com/ai-eng/images-langchain-agents/agent_math_fails.webp\" alt='chart' width=\"1000\"/>\n",
     "</div>\n",
     "Asking GPT-4 to perform a simple calculation often results in an incorrect answer. A simple calculator can perform this same calculation without issue."
    ]
@@ -163,7 +163,7 @@
     "\n",
     "These agents don’t just solve the problems we saw above but many others. In fact, adding agents has an almost unlimited upside in their LLM-enhancing abilities\n",
     "<div>\n",
-    "<img src=\"./img/agent.webp\" alt='chart' width=\"1000\"/>\n",
+    "<img src=\"https://education-team-2020.s3.eu-west-1.amazonaws.com/ai-eng/images-langchain-agents/agent.webp\" alt='chart' width=\"1000\"/>\n",
     "</div>\n",
     "Agents are LLMs that can use tools like calculators, search, or executing code."
    ]
