--- a/langchain-multi-query.ipynb
+++ b/langchain-multi-query.ipynb
@@ -42,7 +42,7 @@
     "4. **Response Generation**: The retrieved documents are used by the language model to generate the final response.\n",
     "\n",
     "<div>\n",
-    "<img src=\"./img/muti.avif\" alt='auto' width=\"1000\"/>\n",
+    "<img src=\"https://education-team-2020.s3.eu-west-1.amazonaws.com/ai-eng/images-langchain-4/muti.avif\" alt='auto' width=\"1000\"/>\n",
     "</div>\n",
     "\n",
     "## Example Code\n",
