fix broken image

--- a/git-and-github.ipynb
+++ b/git-and-github.ipynb
@@ -402,7 +402,7 @@
    "id": "separated-period",
    "metadata": {},
    "source": [
-    "![branches](../images/git_graph.png)"
+    "![branches](https://education-team-2020.s3.eu-west-1.amazonaws.com/ai-eng/git-branching-graph.png)"
    ]
   },
   {
