fix broken image

--- a/git-and-github.ipynb
+++ b/git-and-github.ipynb
@@ -459,7 +459,7 @@
    "id": "designing-poland",
    "metadata": {},
    "source": [
-    "![git_areas](../images/git_areas.png)"
+    "![git_areas](https://education-team-2020.s3.eu-west-1.amazonaws.com/ai-eng/git-areas.png)"
    ]
   },
   {
