add img resource

--- a/git-and-github.ipynb
+++ b/git-and-github.ipynb
@@ -459,7 +459,9 @@
    "id": "designing-poland",
    "metadata": {},
    "source": [
-    "![git_areas](https://education-team-2020.s3.eu-west-1.amazonaws.com/ai-eng/git-areas.png)"
+    "![git_areas](https://education-team-2020.s3.eu-west-1.amazonaws.com/ai-eng/git-areas.png)\n",
+    "\n",
+    "_https://clemsonciti.github.io/rcde_workshops/intro_git_gitlab/02-git-workflow.html_"
    ]
   },
   {
