Removed Data Analytics course references and adjusted probability lesson intro for AI Engineering bootcamp.

--- a/probability/code-along/3.Intro_Prob.ipynb
+++ b/probability/code-along/3.Intro_Prob.ipynb
@@ -15,7 +15,7 @@
    "id": "486766fc-e62b-45eb-b4ff-38f17736093a",
    "metadata": {},
    "source": [
-    "Probability plays a vital role in data analytics by offering a mathematical foundation to measure uncertainty, enabling informed decision-making, and evaluating the chances of different outcomes. This is essential for conducting rigorous statistical analyses and developing accurate predictive models."
+    "Probability plays a vital role in AI engineering by providing a mathematical foundation to quantify uncertainty, optimize machine learning models, and enhance decision-making in AI systems. It is important for designing robust algorithms, improving model reliability, and understanding probabilistic reasoning in tasks like Bayesian inference, deep learning, and generative AI"
    ]
   },
   {
